--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@ plugins {
 	id 'org.springframework.boot' version '2.7.0'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'jacoco'
+	id 'com.palantir.docker' version '0.26.0'
+	id 'com.palantir.docker-run' version '0.26.0'
 
 }
 
 group = 'com.springboot.cloud'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '14'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
@@ -56,5 +58,23 @@ sourceSets{
 
 bootJar{
 	destinationDirectory=project.layout.buildDirectory.dir('libs')
+}
+
+String imageName = "${project.group}/${project.name}"
+docker {
+	dockerfile file('Dockerfile')
+	dependsOn(tasks.findByPath("build"))
+	name imageName
+	files bootJar.archiveFile.get()
+	buildArgs(['JAR_FILE': "${bootJar.archiveFileName.get()}"])
+}
+
+dockerRun {
+	name "${project.name}-container"
+	image imageName
+	ports '8081:8081'
+	env 'SPRING_PROFILES_ACTIVE': 'dev'
+	daemonize true
+	clean false
 }
 
